# DART_interface

./: .gitignore  .gitmodules  README.md  multi_component_design.md  pyproject.toml  requirements-test.txt  run_tests.sh
.github/workflows/: python-tests.yml  test.yml
cesm_build_templates/: mkmf.template.gfortran  mkmf.template.intel.linux  preprocess_input.nml  preprocess_input_atm.nml  preprocess_input_ice.nml  preprocess_input_lnd.nml  quickbuild.sh
cime_config/: assimilate.md  assimilate.py  buildlib  buildnml  config_component.xml  config_compsets.xml  dart_cesm_components.py  dart_input_data_list.py  dart_input_nml.py  dart_obs_seq_list.py  dart_observation_data_list.py  preprocess_input.nml  user_nl_dart
param_templates/: DART_params.yaml  Makefile.cam-fv.cam_dart_obs_preprocessor  Makefile.cam-fv.column_rand  Makefile.cam-fv.filter  Makefile.cam-se.column_rand  Makefile.cam-se.filter  Makefile.cice.cice_to_dart  Makefile.cice.dart_to_cice  Makefile.cice.filter  Makefile.clm.clm_to_dart  Makefile.clm.dart_to_clm  Makefile.clm.filter  Makefile.mom6.filter  extract_namelist_defaults.py  input.nml  input.nml.cam-fv  input.nml.cam-se  input.nml.cice  input.nml.clm  input_data_list.yaml  input_nml.yaml  input_nml_MOM6.yaml  input_nml_cam-fv.yaml  input_nml_cam-se.yaml  input_nml_cice.yaml  input_nml_clm.yaml  nml_to_json.py  nml_to_yaml.py  observation_data_list.yaml  process_makefile_f90.sh  test.f90  test_namelist.f90  yaml_to_json.py
param_templates/json/: input_data_list.json  input_nml.json  input_nml_cam-fv.json  (+4 more)
tests/: test_assimilate.py
(+5 files in other folders)
